# HPCC-Platform

./: .gitignore  .gitmodules  404.html  BUILD_ME.html  CMakeLists.txt  CONTRIBUTORS  README.html  README.md  hashmap.json  index.html
.github/workflows/: build-and-publish.yml  build-assets.yml
assets/: BUILD_ME.md.be9cd987.js  BUILD_ME.md.be9cd987.lean.js  README.md.8ed3dbc6.js  README.md.8ed3dbc6.lean.js  app.23233ef1.js  cmake_modules_DOCUMENTATION.md.e92d1ccc.js  cmake_modules_DOCUMENTATION.md.e92d1ccc.lean.js  devdoc_CodeGenerator.md.c0e99336.js  devdoc_CodeGenerator.md.c0e99336.lean.js  devdoc_CodeReviews.md.f9b41ae5.js  devdoc_CodeReviews.md.f9b41ae5.lean.js  devdoc_CodeSubmissions.md.a06f78bf.js  devdoc_CodeSubmissions.md.a06f78bf.lean.js  devdoc_DevDocs.md.2939a75e.js  devdoc_DevDocs.md.2939a75e.lean.js  devdoc_Development.md.f8494b26.js  devdoc_Development.md.f8494b26.lean.js  devdoc_GitAuthenticate.md.06602807.js  devdoc_GitAuthenticate.md.06602807.lean.js  devdoc_MemoryManager.md.d2006c97.js  devdoc_MemoryManager.md.d2006c97.lean.js  devdoc_Metrics.md.faf0171d.js  devdoc_Metrics.md.faf0171d.lean.js  devdoc_NewFileProcessing.md.10ebeaee.js  devdoc_NewFileProcessing.md.10ebeaee.lean.js  devdoc_README.md.fc6b53f3.js  devdoc_README.md.fc6b53f3.lean.js  devdoc_StyleGuide.md.27192156.js  devdoc_StyleGuide.md.27192156.lean.js  devdoc_VersionSupport.md.46031ea4.js  devdoc_VersionSupport.md.46031ea4.lean.js  devdoc_Workunits.md.57cf9801.js  devdoc_Workunits.md.57cf9801.lean.js  devdoc_newActivity.md.fc1ed78d.js  devdoc_newActivity.md.fc1ed78d.lean.js  devdoc_roxie.md.5dff54bd.js  devdoc_roxie.md.5dff54bd.lean.js  devdoc_userdoc_AzureTipsTricks.md.5478419f.lean.js  devdoc_userdoc_Blogs.md.c6ef85a9.js  devdoc_userdoc_README.md.bcf2845a.js  (+25 more)
assets/chunks/: framework.28ebbb68.js  theme.2f5fcecf.js
cmake_modules/: DOCUMENTATION.html  FindCOUCHBASE.cmake  commonSetup.cmake
common/remote/hooks/: CMakeLists.txt
common/thorhelper/: thorcommon.hpp  thorsoapcall.cpp  thorxmlwrite.cpp  thorxmlwrite.hpp
dali/ft/: daftformat.cpp  daftformat.ipp  filecopy.cpp
deployment/: CMakeLists.txt
deployment/configurator/: BuildSet.hpp  CMakeLists.txt  ComponentAttributes.cpp  ComponentAttributes.hpp  ConfigFileUtils.cpp  ConfigFileUtils.hpp  ConfigFileUtilsObserver.ipp  ConfigSchemaHelper.cpp  ConfigSchemaHelper.hpp  DocumentationMarkup.hpp  DojoHelper.cpp  DojoHelper.hpp  DojoJSMarkup.hpp  DojoJSMarkup.hpp.autosave  ExceptionStrings.cpp  ExceptionStrings.hpp  IComponentUtils.ipp  Main.cpp  NodeHandlerDocumentation.cpp  NodeHandlerDocumentation.hpp  QMLMarkup.cpp  QMLMarkup.hpp  SchemaAll.hpp  SchemaAnnotation.cpp  SchemaAnnotation.hpp  SchemaAppInfo.cpp  SchemaAppInfo.hpp  SchemaAttributeGroup.cpp  SchemaAttributeGroup.hpp  SchemaAttributes.cpp  SchemaAttributes.hpp  SchemaChoice.cpp  SchemaChoice.hpp  SchemaCommon.cpp  SchemaCommon.hpp  SchemaComplexContent.cpp  SchemaComplexContent.hpp  SchemaComplexType.cpp  SchemaComplexType.hpp  SchemaDocumentation.cpp  (+17 more)
deployment/configurator_ui/: ConfiguratorUI.config  ConfiguratorUI.creator  ConfiguratorUI.files  configuratorui.cpp  configuratorui.hpp
deployment/deploy/: XMLTags.h
devdoc/: CodeGenerator.html  CodeReviews.html  CodeSubmissions.html  DevDocs.html  Development.html  GitAuthenticate.html  MemoryManager.html  Metrics.html  NewFileProcessing.html  README.html  StyleGuide.html  VersionSupport.html  Workunits.html  newActivity.html  roxie.html
devdoc/userdoc/: AzureTipsTricks.html  Blogs.html  README.html  WikiGuidelines.html
devdoc/userdoc/azure/: TipsAndTricks.html
devdoc/userdoc/roxie/: FAQ.html
devdoc/userdoc/troubleshoot/: ClientsToolIssues.html
dockerfiles/hpcc/: values.yaml
docs/ECLLanguageReference/ECLR_mods/: RecordStructure.xml
ecl/ecl-bundle/: DOCUMENTATION.html
ecl/hql/: hqlatoms.cpp  hqlatoms.hpp  hqlgram.y  hqlgram2.cpp  hqllex.l
ecl/hqlcpp/: hqlhtcpp.cpp  hqlresource.cpp
ecl/hthor/: hthor.cpp
ecllibrary/: StyleGuide.html
ecllibrary/std/system/: Log.ecl
esp/applications/eclqueries/: CMakeLists.txt
esp/bindings/: CMakeLists.txt
esp/cache/: CMakeLists.txt  espcacheclient.hpp
esp/cache/cassandraespcache/: CMakeLists.txt  cassandraespcache.cpp  cassandraespcache.hpp
esp/esdllib/: esdl_transformer2.cpp
esp/files/scripts/: WUDetailsWidget.js
esp/files/templates/: WUDetailsWidget.html
esp/platform/: espcfg.cpp  espcfg.ipp  espcontext.cpp  espp.hpp  espprotocol.cpp  sechandler.cpp  sechandler.hpp
esp/scm/: esp.ecm  espscm.cmake  metrics.ecm  ws_esdlconfig.ecm  ws_espcontrol.ecm  ws_logaccess.ecm  ws_store.ecm
esp/services/: CMakeLists.txt
esp/services/WsDeploy/: WsDeployBinding.cpp
esp/services/esdl_svc_engine/: esdl_binding.cpp  esdl_binding.hpp  esdl_svc_engine.cpp
esp/services/espcontrol/: ws_espcontrolservice.cpp  ws_espcontrolservice.hpp
esp/services/metrics/: CMakeLists.txt  MetricsPlugin.cpp  MetricsService.cpp  MetricsService.hpp
esp/services/ws_dfu/: ws_dfuService.cpp  ws_dfuService.hpp
esp/services/ws_ecl/: ws_ecl_service.cpp  ws_ecl_service.hpp
esp/services/ws_store/dalisecurelib/: CMakeLists.txt  daliSecureStore.cpp  daliSecureStore.hpp
esp/tools/: CMakeLists.txt
esp/xslt/: CMakeLists.txt  esxdl2xsd.xslt  roxie_page.xsl
helm/: README.md
helm/hpcc/: Chart.yaml  values.schema.json  values.yaml
metrics/: CMakeLists.txt
metrics/prometheus-reporter/: CMakeLists.txt  PrometheusReporter.cpp  PrometheusReporter.h
plugins/: CMakeLists.txt
plugins/couchbase/: CMakeLists.txt  README.md  couchbase.ecllib  couchbaseembed.cpp  couchbaseembed.hpp
plugins/javaembed/: javaembed.cpp
plugins/logging/: logging.cpp  logging.hpp
roxie/ccd/: ccd.hpp  ccdquery.cpp  ccdserver.cpp
rtl/include/: eclhelper.hpp
system/httplib/: README.html
system/jlib/: jlog.cpp  jlog.hpp  jtrace.cpp  jtrace.hpp
testing/unittests/: jlibtests.cpp
thorlcr/graph/: thgraph.cpp  thgraphmaster.cpp
tools/esdlcmd/: esdl2ecl.cpp  esdlcmd_common.hpp  esdlcmd_core.cpp
tools/esdlcmd-xml/: esdl2xml.cpp
tools/hidl/: CMakeLists.txt  hidlcomp.cpp
tools/tagging/: README.html
(+75 files in other folders)
